Update credhub client and add vars-to-credhub binary

--- a/docker/snpaas-tools/Dockerfile
+++ b/docker/snpaas-tools/Dockerfile
@@ -1,4 +1,3 @@
-#FROM alpine:3.10
 FROM debian:10.2-slim
 
 # docker build . -t snpaas-tools
@@ -8,7 +7,7 @@ FROM debian:10.2-slim
 
 # Version of this image
 # ARG VERSION=1.2
-ARG VERSION=2.4
+ARG VERSION=2.5
 
 # Versions, please prefix them with SNPAAS_ and suffix with _VERSION
 # (see run.sh script)
@@ -17,12 +16,13 @@ ARG SNPAAS_TERRAFORM_VERSION=0.11.8
 ARG SNPAAS_CF_CLI_VERSION=6.40.0
 ARG SNPAAS_SPRUCE_VERSION=1.18.0
 ARG SNPAAS_JQ_VERSION=1.5
-ARG SNPAAS_CREDHUB_VERSION=1.7.7
+ARG SNPAAS_CREDHUB_VERSION=2.7.0
 ARG SNPAAS_FLY_VERSION=3.14.1
 ARG SNPAAS_BBR_VERSION=1.2.2
 ARG SNPAAS_CERTSTRAP_VERSION=1.1.1
 ARG SNPAAS_SPIFF_VERSION=1.0.8
 ARG SNPAAS_GCLOUD_SDK_VERSION=267.0.0
+ARG SNPAAS_VARSTOCREDHUB_VERSION=0.1.0
 
 ARG USER=snpaas
 ARG HOME=/home/snpaas
@@ -63,6 +63,7 @@ ENV SNPAAS_FLY_VERSION=$SNPAAS_FLY_VERSION
 ENV SNPAAS_BBR_VERSION=$SNPAAS_BBR_VERSION
 ENV SNPAAS_CERTSTRAP_VERSION=$SNPAAS_CERTSTRAP_VERSION
 ENV SNPAAS_SPIFF_VERSION=$SNPAAS_SPIFF_VERSION
+ENV SNPAAS_VARSTOCREDHUB_VERSION=$SNPAAS_VARSTOCREDHUB_VERSION
 
 RUN set -xe                                                                 && \
     groupadd --gid "${GUID}" "${USER}"                                      && \
@@ -121,10 +122,8 @@ RUN set -xe                                                                 && \
     wget "https://github.com/cloudfoundry-incubator/bosh-backup-and-restore/releases/download/v${SNPAAS_BBR_VERSION}/bbr-${SNPAAS_BBR_VERSION}.tar" -nv -O - | tar -x -C /tmp releases/bbr && mv /tmp/releases/bbr /usr/local/bin/bbr && \
     wget "https://releases.hashicorp.com/terraform/${SNPAAS_TERRAFORM_VERSION}/terraform_${SNPAAS_TERRAFORM_VERSION}_linux_amd64.zip" -nv -O /tmp/terraform.zip && unzip -q /tmp/terraform.zip -d /usr/local/bin                      && \
     wget "https://github.com/cloudfoundry-incubator/spiff/releases/download/v${SNPAAS_SPIFF_VERSION}/spiff_linux_amd64.zip" -nv -O /tmp/spiff.zip && unzip -q /tmp/spiff.zip -d /usr/local/bin                                  && \
+    wget "https://github.com/SpringerPE/vars-to-credhub/releases/download/v${SNPAAS_VARSTOCREDHUB_VERSION}/vars-to-credhub-linux-amd64" -nv -O /usr/local/bin/vars-to-credhub                                                      && \
     wget "https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-${SNPAAS_GCLOUD_SDK_VERSION}-linux-x86_64.tar.gz" -nv -O - | tar -zx -C /opt
-
-COPY Readme.md /
-COPY resources/*.sh /usr/local/bin/
 
 ENV PATH $PATH:/usr/local/bin:/opt/google-cloud-sdk/bin
 ENV CF_PLUGIN_HOME $SNPAAS_CF6_PLUGINS/cfv6
@@ -159,7 +158,8 @@ RUN set -xe                                                                 && \
     cf install-plugin -f -r CF-Community "Statistics"                       && \
     chown -R ${USER}:${USER} ${HOME} $SNPAAS_CF6_PLUGINS
 
-
+COPY Readme.md /
+COPY resources/*.sh /usr/local/bin/
 VOLUME "${DATADIR}" "${HOME}"
 
 # Main command
