Workaround to get it working in Mac by avoiding mounting the home (and not doing caching)

--- a/docker/snpaas-tools/Dockerfile
+++ b/docker/snpaas-tools/Dockerfile
@@ -7,7 +7,7 @@ FROM debian:10.2-slim
 
 # Version of this image
 # ARG VERSION=1.2
-ARG VERSION=3.1
+ARG VERSION=3.3
 
 # Versions, please prefix them with SNPAAS_ and suffix with _VERSION
 # (see run.sh script)
@@ -175,7 +175,7 @@ RUN set -xe                                                                 && \
 
 COPY Readme.md /
 COPY resources/*.sh /usr/local/bin/
-VOLUME "${DATADIR}" "${HOME}"
+VOLUME "${DATADIR}"
 
 # Main command
 ENTRYPOINT ["/bin/bash", "/run.sh"]
