Update Debian base image, install gcloud components beta, install vault, yq, halfpipe, fly

--- a/docker/snpaas-tools/Dockerfile
+++ b/docker/snpaas-tools/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:10.2-slim
+FROM debian:10.4-slim
 
 # docker build . -t snpaas-tools
 # docker run -it -v $(pwd)/data snpaas-tools help
@@ -7,22 +7,28 @@ FROM debian:10.2-slim
 
 # Version of this image
 # ARG VERSION=1.2
-ARG VERSION=3.9
+ARG VERSION=3.10
 
 # Versions, please prefix them with SNPAAS_ and suffix with _VERSION
 # (see run.sh script)
-ARG SNPAAS_BOSH_CLI_VERSION=6.2.1
+ARG SNPAAS_BOSH_CLI_VERSION=6.3.0
+# Updating terrafrom needs extra care, because it can become incompatible with
+# current deployments. Ask snpaas team!
 ARG SNPAAS_TERRAFORM_VERSION=0.12.23
-ARG SNPAAS_CF_CLI_VERSION=6.40.0
+ARG SNPAAS_CF_CLI_VERSION=6.45.0
 ARG SNPAAS_SPRUCE_VERSION=1.18.0
 ARG SNPAAS_JQ_VERSION=1.5
 ARG SNPAAS_CREDHUB_VERSION=2.7.0
-ARG SNPAAS_FLY_VERSION=3.14.1
-ARG SNPAAS_BBR_VERSION=1.2.2
+ARG SNPAAS_FLY_VERSION=6.3.0
+ARG SNPAAS_BBR_VERSION=1.7.2
 ARG SNPAAS_CERTSTRAP_VERSION=1.1.1
 ARG SNPAAS_SPIFF_VERSION=1.0.8
-ARG SNPAAS_GCLOUD_SDK_VERSION=267.0.0
+ARG SNPAAS_GCLOUD_SDK_VERSION=298.0.0
 ARG SNPAAS_VARSTOCREDHUB_VERSION=0.1.0
+ARG SNPAAS_CF_RTR_VERSION=2.22.0
+ARG SNPAAS_HALFPIPE_VERSION=3.34.0
+ARG SNPAAS_YQ_VERSION=3.3.2
+ARG SNPAAS_VAULT_VERSION=1.4.2
 
 ARG USER=snpaas
 ARG HOME=/home/snpaas
@@ -33,8 +39,8 @@ ARG DATADIR=/data
 ARG OPTDIR=/opt
 
 LABEL org.label-schema.docker.schema-version="1.0"
-LABEL org.label-schema.vendor="Springer Nature EE"
-LABEL org.label-schema.description="SNPaaS tools image based on alpine"
+LABEL org.label-schema.vendor="Springer Nature Engineering Enablement"
+LABEL org.label-schema.description="SNPaaS tools image based on debian"
 LABEL org.label-schema.name="snpaas-tools"
 LABEL org.label-schema.version="${VERSION}"
 LABEL org.label-schema.usage="./README.md"
@@ -51,7 +57,6 @@ ENV SNPAAS_USER="${USER}"
 ENV SNPAAS_HOME="${HOME}"
 ENV SNPAAS_DATADIR="${DATADIR}"
 ENV SNPAAS_CF6_PLUGINS="${OPTDIR}"
-
 ENV SNPAAS_GCLOUD_SDK_VERSION=$SNPAAS_GCLOUD_SDK_VERSION
 ENV SNPAAS_BOSH_CLI_VERSION=$SNPAAS_BOSH_CLI_VERSION
 ENV SNPAAS_TERRAFORM_VERSION=$SNPAAS_TERRAFORM_VERSION
@@ -64,6 +69,10 @@ ENV SNPAAS_BBR_VERSION=$SNPAAS_BBR_VERSION
 ENV SNPAAS_CERTSTRAP_VERSION=$SNPAAS_CERTSTRAP_VERSION
 ENV SNPAAS_SPIFF_VERSION=$SNPAAS_SPIFF_VERSION
 ENV SNPAAS_VARSTOCREDHUB_VERSION=$SNPAAS_VARSTOCREDHUB_VERSION
+ENV SNPAAS_CF_RTR_VERSION=$SNPAAS_CF_RTR_VERSION
+ENV SNPAAS_HALFPIPE_VERSION=$SNPAAS_HALFPIPE_VERSION
+ENV SNPAAS_YQ_VERSION=$SNPAAS_YQ_VERSION
+ENV SNPAAS_VAULT_VERSION=$SNPAAS_VAULT_VERSION
 
 RUN set -xe                                                                 && \
     groupadd --gid "${GUID}" "${USER}"                                      && \
@@ -72,7 +81,7 @@ RUN set -xe                                                                 && \
             --shell /bin/bash \
             --uid "${UID}" "${USER}"                                        && \
     apt-get update                                                          && \
-    # Installing packages. Some of these are required because of 
+    # Installing packages. Some of these are required because of
     # dependencies with the binaries
     apt-get install --no-install-recommends -qq -y \
         tzdata \
@@ -123,22 +132,27 @@ RUN set -xe                                                                 && \
     echo "${TIMEZONE}" > /etc/timezone                                      && \
     ln -s /lib /lib64                                                       && \
     # clean up
-    rm -rf /tmp/* /var/tmp/* /var/lib/apt/lists/* /var/cache/distfiles/* ~/.cache
+    rm -rf /tmp/* /var/tmp/* /var/lib/apt/lists/* /var/cache/apt/* /var/cache/distfiles/* ~/.cache
 
 RUN set -xe                                                                 && \
     mkdir -p /opt                                                           && \
-    wget "https://cli.run.pivotal.io/stable?release=linux64-binary&version=${SNPAAS_CF_CLI_VERSION}" -nv -O - | tar -zx -C /usr/local/bin                                                                                      && \
-    wget "https://github.com/geofffranks/spruce/releases/download/v${SNPAAS_SPRUCE_VERSION}/spruce-linux-amd64" -nv -O /usr/local/bin/spruce                                                                                   && \
-    wget "https://github.com/stedolan/jq/releases/download/jq-${SNPAAS_JQ_VERSION}/jq-linux64" -nv -O /usr/local/bin/jq                                                                                                        && \
-    wget "https://s3.amazonaws.com/bosh-cli-artifacts/bosh-cli-${SNPAAS_BOSH_CLI_VERSION}-linux-amd64" -nv -O /usr/local/bin/bosh                                                                                              && \
+    wget "https://cli.run.pivotal.io/stable?release=linux64-binary&version=${SNPAAS_CF_CLI_VERSION}" -nv -O - | tar -zx -C /usr/local/bin                                                                                             && \
+    wget "https://github.com/geofffranks/spruce/releases/download/v${SNPAAS_SPRUCE_VERSION}/spruce-linux-amd64" -nv -O /usr/local/bin/spruce                                                                                          && \
+    wget "https://github.com/stedolan/jq/releases/download/jq-${SNPAAS_JQ_VERSION}/jq-linux64" -nv -O /usr/local/bin/jq                                                                                                               && \
+    wget "https://s3.amazonaws.com/bosh-cli-artifacts/bosh-cli-${SNPAAS_BOSH_CLI_VERSION}-linux-amd64" -nv -O /usr/local/bin/bosh                                                                                                     && \
     wget "https://github.com/cloudfoundry-incubator/credhub-cli/releases/download/${SNPAAS_CREDHUB_VERSION}/credhub-linux-${SNPAAS_CREDHUB_VERSION}.tgz" -nv -O - | tar -xz -C /usr/local/bin                                         && \
-    wget "https://github.com/concourse/concourse/releases/download/v${SNPAAS_FLY_VERSION}/fly_linux_amd64" -nv -O /usr/local/bin/fly                                                                                           && \
+    wget "https://github.com/concourse/concourse/releases/download/v${SNPAAS_FLY_VERSION}/fly-${SNPAAS_FLY_VERSION}-linux-amd64.tgz" -nv -O - | tar -xz -C /usr/local/bin                                                             && \
     wget "https://github.com/square/certstrap/releases/download/v${SNPAAS_CERTSTRAP_VERSION}/certstrap-v${SNPAAS_CERTSTRAP_VERSION}-linux-amd64" -nv -O /usr/local/bin/certstrap                                                      && \
     wget "https://github.com/cloudfoundry-incubator/bosh-backup-and-restore/releases/download/v${SNPAAS_BBR_VERSION}/bbr-${SNPAAS_BBR_VERSION}.tar" -nv -O - | tar -x -C /tmp releases/bbr && mv /tmp/releases/bbr /usr/local/bin/bbr && \
     wget "https://releases.hashicorp.com/terraform/${SNPAAS_TERRAFORM_VERSION}/terraform_${SNPAAS_TERRAFORM_VERSION}_linux_amd64.zip" -nv -O /tmp/terraform.zip && unzip -q /tmp/terraform.zip -d /usr/local/bin                      && \
-    wget "https://github.com/cloudfoundry-incubator/spiff/releases/download/v${SNPAAS_SPIFF_VERSION}/spiff_linux_amd64.zip" -nv -O /tmp/spiff.zip && unzip -q /tmp/spiff.zip -d /usr/local/bin                                  && \
-    wget "https://github.com/SpringerPE/vars-to-credhub/releases/download/v${SNPAAS_VARSTOCREDHUB_VERSION}/vars-to-credhub-linux-amd64" -nv -O /usr/local/bin/vars-to-credhub                                                      && \
-    wget "https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-${SNPAAS_GCLOUD_SDK_VERSION}-linux-x86_64.tar.gz" -nv -O - | tar -zx -C /opt
+    wget "https://github.com/cloudfoundry-incubator/spiff/releases/download/v${SNPAAS_SPIFF_VERSION}/spiff_linux_amd64.zip" -nv -O /tmp/spiff.zip && unzip -q /tmp/spiff.zip -d /usr/local/bin                                        && \
+    wget "https://github.com/SpringerPE/vars-to-credhub/releases/download/v${SNPAAS_VARSTOCREDHUB_VERSION}/vars-to-credhub-linux-amd64" -nv -O /usr/local/bin/vars-to-credhub                                                         && \
+    wget "https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-${SNPAAS_GCLOUD_SDK_VERSION}-linux-x86_64.tar.gz" -nv -O - | tar -zx -C /opt                                                                    && \
+    wget "https://github.com/mikefarah/yq/releases/download/${SNPAAS_YQ_VERSION}/yq_linux_amd64" -nv -O /usr/local/bin/yq                                                                                                             && \
+    wget "https://github.com/springernature/halfpipe/releases/download/${SNPAAS_HALFPIPE_VERSION}/halfpipe_linux_${SNPAAS_HALFPIPE_VERSION}" -nv -O /usr/local/bin/halfpipe                                                           && \
+    wget "https://github.com/cloudfoundry/routing-api-cli/releases/download/${SNPAAS_CF_RTR_VERSION}/rtr-linux-amd64.tgz"  -nv -O - | tar -zx -C /tmp && mv /tmp/rtr-linux-amd64 /usr/local/bin/rtr                                   && \
+    wget "https://releases.hashicorp.com/vault/${SNPAAS_VAULT_VERSION}/vault_${SNPAAS_VAULT_VERSION}_linux_amd64.zip" -nv -O /tmp/vault.zip && unzip -q /tmp/vault.zip -d /usr/local/bin
+
 
 ENV PATH $PATH:/usr/local/bin:/opt/google-cloud-sdk/bin
 ENV CF_PLUGIN_HOME $SNPAAS_CF6_PLUGINS/cfv6
@@ -150,6 +164,7 @@ RUN set -xe                                                                 && \
     mkdir -p ${HOME}/.ssh                                                   && \
     chmod 700 ${HOME}/.ssh                                                  && \
     # Setting up gcloud defaults
+    gcloud components install beta                                          && \
     gcloud config set core/disable_usage_reporting true                     && \
     gcloud config set component_manager/disable_update_check true           && \
     gcloud config set metrics/environment github_docker_image               && \
