--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -1,5 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-name: docker-build
+name: docker-build-commit
 
 on:
   push:
@@ -8,6 +8,7 @@ on:
 
 jobs:
   docker-build:
+    name: Docker Build
     runs-on: ubuntu-latest
     steps:
       # Get the repositery's code
@@ -41,5 +42,5 @@ jobs:
 
       - name: Run help
         run: |
-            DOCKER_IMAGE=$IMAGE_TAG ./snpaas
+            DOCKER_IMAGE=$IMAGE_NAME ./snpaas
 
