--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   docker-build:
-    name: Docker Build
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
