--- a/.github/workflows/docker-build-release.yml
+++ b/.github/workflows/docker-build-release.yml
@@ -1,10 +1,19 @@
 # When a commit is pushed with text matching v*, i.e. v1.0, v20.15.10, creates a new release
-name: Docker Build and Release
+name: Docker build, release and push to DockerHub
 
 on:
   push:
     tags:
-      - '*'
+    - '*'
+#    paths:
+#    - 'docker/**'
+
+env:
+  RELEASE: snpaas-cli
+  TITLE: "SNPaaS client"
+  DOCKER_IMAGE_REPO: platformengineering
+  DOCKER_IMAGE_NAME: snpaas-tools
+  DOCKER_BUILD_DIR: docker/snpaas-tools
 
 jobs:
   build:
@@ -19,10 +28,6 @@ jobs:
 
       - name: Set docker build variables
         id: docker
-        env:
-          DOCKER_IMAGE_REPO: platformengineering
-          DOCKER_IMAGE_NAME: snpaas-tools
-          DOCKER_BUILD_DIR: docker/snpaas-tools
         run: |
             VERSION=$(sed -ne 's/^ARG.* VERSION=\(.*\)/\1/p' ${DOCKER_BUILD_DIR}/Dockerfile)
             echo ::set-env name=NAME::$(echo ${DOCKER_IMAGE_NAME})
@@ -65,15 +70,12 @@ jobs:
 
       - name: Set release variables
         id: release
-        env:
-          RELEASE: snpaas-cli
-          TITLE: "SNPaaS client"
         run: |
             tag=$(git describe --abbrev=0 --tags)
-            prevtag=$(git describe --abbrev=0 --tags ${tag}^)
-            changes=$(git log --pretty="%h %aI %s (%an)" ${prevtag}..${tag} | sed 's/^/- /')
+            prevtag=$(git describe --abbrev=0 --tags "${tag}^")
+            changes=$(git log --pretty="%h %aI %s (%an)" "${prevtag}..${tag}" | sed 's/^/- /')
             description=$(cat <<EOF
-            # $RELEASE version ${{needs.build.outputs.version}}
+            # $RELEASE version ${{needs.build.outputs.version}} (build tag: ${tag})
             
             $TITLE
             
@@ -86,7 +88,7 @@ jobs:
             echo ::set-output name=description::$(echo ${description})
             echo ::set-output name=release::$(echo ${RELEASE})
             echo ::set-output name=name::$(echo ${TITLE} version ${{needs.build.outputs.version}})
-            echo ::set-output name=tag::$(echo v${{needs.build.outputs.version}})
+            echo ::set-output name=tag::$(echo ${tag})
  
       - name: Create Release
         uses: actions/create-release@v1
