fix changes description in release 2

--- a/.github/workflows/docker-build-release.yml
+++ b/.github/workflows/docker-build-release.yml
@@ -76,7 +76,7 @@ jobs:
             tag=$(git describe --abbrev=0 --tags)
             prevtag=$(git describe --abbrev=0 --tags "${tag}^")
             changes=$(git log --pretty="%h %aI %s (%an)" "${prevtag}..${tag}" | sed 's/^/- /')
-            description=$(cat <<EOF
+            cat <<EOF > description.md
             # $RELEASE version ${{needs.build.outputs.version}} (build tag: ${tag})
             
             $TITLE
@@ -86,8 +86,7 @@ jobs:
             $changes
             
             EOF
-            )
-            echo ::set-output name=description::$(echo ${description})
+            echo ::set-output name=description::$(cat description.md)
             echo ::set-output name=release::$(echo ${RELEASE})
             echo ::set-output name=name::$(echo ${TITLE} version ${{needs.build.outputs.version}})
             echo ::set-output name=tag::$(echo ${tag})
@@ -99,8 +98,7 @@ jobs:
         with:
           tag_name: ${{steps.release.outputs.tag}}
           release_name: ${{steps.release.outputs.name}}
-          body: |
-            ${{steps.release.outputs.description}}
+          body_path: description.md
           draft: false
           prerelease: false
 
