--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -22,12 +22,12 @@ jobs:
       - name: Set docker build variables
         id: docker
         run: |
-
+            echo ${DOCKER_BUILD_DIR}
             echo 'NAME'=${DOCKER_IMAGE_NAME}) >> $GITHUB_ENV
             echo 'REPO'=${DOCKER_IMAGE_REPO} >> $GITHUB_ENV
             echo 'TAG'=${DOCKER_IMAGE_REPO}/${DOCKER_IMAGE_NAME} >> $GITHUB_ENV
             echo 'BUILDDIR'=${DOCKER_BUILD_DIR} >> $GITHUB_ENV
-            echo 'VERSION'=${VERSION} >> $GITHUB_ENV
+            echo 'VERSION'=$(sed -ne 's/^ARG.* VERSION=\(.*\)/\1/p' ${DOCKER_BUILD_DIR}/Dockerfile) >> $GITHUB_ENV
             echo ::set-output name=name::$(echo ${DOCKER_IMAGE_NAME} >> $GITHUB_ENV
             echo ::set-output name=builddir::$(echo ${DOCKER_BUILD_DIR})
             echo ::set-output name=version::$(echo ${VERSION})
