--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -10,7 +10,7 @@ env:
   DOCKER_IMAGE_REPO: platformengineering
   DOCKER_IMAGE_NAME: snpaas-tools
   DOCKER_BUILD_DIR: docker/snpaas-tools
-  VERSION: $(cat ${DOCKER_BUILD_DIR}/Dockerfile | sed -ne 's/^ARG.* VERSION=\(.*\)/\1/p')
+  VERSION: $(cat ${DOCKER_BUILD_DIR}/Dockerfile | grep "^ARG VERSION" | cut -d "=" -f2)
   TAG: ${DOCKER_IMAGE_REPO}/${DOCKER_IMAGE_NAME}
 jobs:
   docker-build:
@@ -23,6 +23,7 @@ jobs:
       - name: Set docker build variables
         id: docker
         run: |
+            echo $DOCKER_IMAGE_REPO
             echo $VERSION
             echo ::set-output name=name::$(echo ${DOCKER_IMAGE_NAME}
             echo ::set-output name=builddir::$(echo ${DOCKER_BUILD_DIR})
