--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -11,8 +11,8 @@ env:
   DOCKER_IMAGE_NAME: snpaas-tools
   DOCKER_BUILD_DIR: docker/snpaas-tools
   VERSION: 3.${{ github.run_number }}.0
-  TAG: $DOCKER_IMAGE_REPO/$DOCKER_IMAGE_NAME
-  
+  TAG: ${{ env.DOCKER_IMAGE_REPO }}/${{ env.DOCKER_IMAGE_NAME }}
+
 jobs:
   docker-build:
     name: Build
