--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
             echo $DOCKER_IMAGE_REPO
             echo $VERSION
-            echo ::set-output tagname=name::$(echo ${DOCKER_IMAGE_NAME})
+            echo ::set-output name=tagname::$(echo ${DOCKER_IMAGE_NAME})
             echo ::set-output name=builddir::$(echo ${DOCKER_BUILD_DIR})
             echo ::set-output name=imageversion::$(echo ${VERSION})
             echo ::set-output name=tagtag::$(echo $TAG)
